--- a/1.1/1.1.md
+++ b/1.1/1.1.md
@@ -1,5 +1,9 @@
 # Домашнее задание к занятию «Kubernetes. Причины появления. Команда kubectl»
 
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.1/Screen/kubectl.png)
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.1/Screen/dashboard.png)
+
 ### Цель задания
 
 Для экспериментов и валидации ваших решений вам нужно подготовить тестовую среду для работы с Kubernetes. Оптимальное решение — развернуть на рабочей машине или на отдельной виртуальной машине MicroK8S.
