--- a/1.2/1.2.md
+++ b/1.2/1.2.md
@@ -24,17 +24,86 @@
 ### Задание 1. Создать Pod с именем hello-world
 
 1. Создать манифест (yaml-конфигурацию) Pod.
+
+[Манифест pod_hello-world](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.2/pod_hello-world.yaml)
+
+```yaml
+apiVersion: v1
+kind: Pod
+metadata:
+  name: hello-world
+  labels:
+    app: hello-world
+  namespace: default
+spec:
+  containers:
+    - name: test-echoserver
+      image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
+      imagePullPolicy: IfNotPresent
+      ports:
+      - containerPort: 8080
+```
+
 2. Использовать image - gcr.io/kubernetes-e2e-test-images/echoserver:2.2.
 3. Подключиться локально к Pod с помощью `kubectl port-forward` и вывести значение (curl или в браузере).
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.2/Screen/pod_apply_get_forward.png)
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.2/Screen/pod_curl.png)
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.2/Screen/pod_browser.png)
 
 ------
 
 ### Задание 2. Создать Service и подключить его к Pod
 
 1. Создать Pod с именем netology-web.
+
+[Манифест pod_netology-web](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.2/pod_netology-web.yaml)
+
+```yaml
+apiVersion: v1
+kind: Pod
+metadata:
+  name: netology-web
+  labels:
+    app: netology-web
+  namespace: default
+spec:
+  containers:
+    - name: test-echoserver
+      image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
+      imagePullPolicy: IfNotPresent
+      ports:
+      - containerPort: 8080
+```
+
 2. Использовать image — gcr.io/kubernetes-e2e-test-images/echoserver:2.2.
 3. Создать Service с именем netology-svc и подключить к netology-web.
+
+[Манифест service_netology-svc](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.2/service_netology-svc.yaml)
+
+```yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: netology-svc
+spec:
+  selector:
+    app: netology-web
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
+```
+
 4. Подключиться локально к Service с помощью `kubectl port-forward` и вывести значение (curl или в браузере).
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.2/Screen/service_apply_get_forward.png)
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.2/Screen/service_curl.png)
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.2/Screen/service_browser.png)
 
 ------
 
