--- a/1.3/1.3.md
+++ b/1.3/1.3.md
@@ -25,21 +25,81 @@
 ### Задание 1. Создать Deployment и обеспечить доступ к репликам приложения из другого Pod
 
 1. Создать Deployment приложения, состоящего из двух контейнеров — nginx и multitool. Решить возникшую ошибку.
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.3/Screen/dep_apply.png)
+
+Лог контейнера nginx
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.3/Screen/nginx_logs.png)
+
+Лог контейнера multitool
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.3/Screen/multitool_logs.png)
+
+Оба контейнера внутри пода используют 80-й порт. Нужно сменить у мультитула прослушиваемый порт.
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.3/Screen/dep_fix_apply.png)
+
+
 2. После запуска увеличить количество реплик работающего приложения до 2.
+
+```yaml
+spec:
+  replicas: 2
+```
+
 3. Продемонстрировать количество подов до и после масштабирования.
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.3/Screen/dep_fix_apply.png)
+
+Контейнеры создаются, контейнеры созданы
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.3/Screen/dep_replicas_apply.png)
+
 4. Создать Service, который обеспечит доступ до реплик приложений из п.1.
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.3/Screen/service_created.png)
+
 5. Создать отдельный Pod с приложением multitool и убедиться с помощью `curl`, что из пода есть доступ до приложений из п.1.
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.3/Screen/pod_created.png)
+
+curl до nginx
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.3/Screen/pod_svc_curl_80.png)
+
+curl до multitool
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.3/Screen/pod_svc_curl_8080.png)
 
 ------
 
 ### Задание 2. Создать Deployment и обеспечить старт основного контейнера при выполнении условий
 
 1. Создать Deployment приложения nginx и обеспечить старт контейнера только после того, как будет запущен сервис этого приложения.
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.3/Screen/pod_init.png)
+
 2. Убедиться, что nginx не стартует. В качестве Init-контейнера взять busybox.
 3. Создать и запустить Service. Убедиться, что Init запустился.
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.3/Screen/pod_init_fix.png)
+
 4. Продемонстрировать состояние пода до и после запуска сервиса.
 
-------
+---
+
+[Манифест deployment nginx+multitool](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.3/deployment.yaml)
+
+[Манифест service nginx+multitool](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.3/service_nginx-multitool.yaml)
+
+[Манифест pod multitool](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.3/pod_multitool.yaml)
+
+[Манифест init nginx](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.3/nginx-deployment.yaml)
+
+[Манифест service init nginx](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.3/nginx-service.yaml)
+
+---
 
 ### Правила приема работы
 
