--- a/1.4/1.4.md
+++ b/1.4/1.4.md
@@ -27,7 +27,29 @@
 1. Создать Deployment приложения, состоящего из двух контейнеров (nginx и multitool), с количеством реплик 3 шт.
 2. Создать Service, который обеспечит доступ внутри кластера до контейнеров приложения из п.1 по порту 9001 — nginx 80, по 9002 — multitool 8080.
 3. Создать отдельный Pod с приложением multitool и убедиться с помощью `curl`, что из пода есть доступ до приложения из п.1 по разным портам в разные контейнеры.
+
+Развертывание, сервис и под созданы. Тип сервиса `ClusterIP`, доступа из внешки нет (без определенных вмешательств)
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.4/Screen/dep_svc_pod_create.png)
+
+curl до nginx по ip
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.4/Screen/curl_ip_9001.png)
+
+curl до multitool по ip
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.4/Screen/curl_ip_9002.png)
+
 4. Продемонстрировать доступ с помощью `curl` по доменному имени сервиса.
+
+curl до nginx по имени сервиса
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.4/Screen/curl_9001.png)
+
+curl до multitool по имени сервиса
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.4/Screen/curl_9002.png)
+
 5. Предоставить манифесты Deployment и Service в решении, а также скриншоты или вывод команды п.4.
 
 ------
@@ -35,8 +57,32 @@
 ### Задание 2. Создать Service и обеспечить доступ к приложениям снаружи кластера
 
 1. Создать отдельный Service приложения из Задания 1 с возможностью доступа снаружи кластера к nginx, используя тип NodePort.
+
+Развертывание остается прежним, тип сервиса `NodeReport`, во внешку открыты указанные порты на всех нодах
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.4/Screen/dep_nodeport_create.png)
+
 2. Продемонстрировать доступ с помощью браузера или `curl` с локального компьютера.
+
+http до nginx по ip виртуальной машины
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.4/Screen/http_nodeport_30080.png)
+
+http до multitool по ip виртуальной машины
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.4/Screen/http_nodeport_30081.png)
+
 3. Предоставить манифест и Service в решении, а также скриншоты или вывод команды п.2.
+
+---
+
+[Манифест deployment nginx+multitool](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.4/dep_nginx_multitool.yaml)
+
+[Манифест service ClusterIP](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.4/svc_nginx_multitool.yaml)
+
+[Манифест pod multitool](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.4/pod_multitool.yaml)
+
+[Манифест service NodePort](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.4/svc_nodeport_nginx_multitool.yaml)
 
 ------
 
