--- a/1.5/1.5.md
+++ b/1.5/1.5.md
@@ -26,9 +26,19 @@
 ### Задание 1. Создать Deployment приложений backend и frontend
 
 1. Создать Deployment приложения _frontend_ из образа nginx с количеством реплик 3 шт.
-2. Создать Deployment приложения _backend_ из образа multitool. 
-3. Добавить Service, которые обеспечат доступ к обоим приложениям внутри кластера. 
+2. Создать Deployment приложения _backend_ из образа multitool.
+3. Добавить Service, которые обеспечат доступ к обоим приложениям внутри кластера.
+
+Два деплоймента и на каждый деплоймент отдельный сервис. Контейнеры находятся в разных подах, поэтому в данном стенде оба могут использовать 80-й порт. Специально переназначать порт у мультитула не буду
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.5/Screen/dep_svc_created.png)
+
 4. Продемонстрировать, что приложения видят друг друга с помощью Service.
+
+Фронт и бэк доступны по имени сервиса и 80 порту
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.5/Screen/curl_front_back.png)
+
 5. Предоставить манифесты Deployment и Service в решении, а также скриншоты или вывод команды п.4.
 
 ------
@@ -36,9 +46,43 @@
 ### Задание 2. Создать Ingress и обеспечить доступ к приложениям снаружи кластера
 
 1. Включить Ingress-controller в MicroK8S.
+
+Ингресс включается
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.5/Screen/ingress_enable.png)
+
+Ингресс включен
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.5/Screen/ingress_status.png)
+
 2. Создать Ingress, обеспечивающий доступ снаружи по IP-адресу кластера MicroK8S так, чтобы при запросе только по адресу открывался _frontend_ а при добавлении /api - _backend_.
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.5/Screen/ingress_status.png)
+
 3. Продемонстрировать доступ с помощью браузера или `curl` с локального компьютера.
+
+http с локальной машины до фронта
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.5/Screen/http_front.png)
+
+http с локальной машины до бэка через /api
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.5/Screen/http_back_api.png)
+
 4. Предоставить манифесты и скриншоты или вывод команды п.2.
+
+---
+
+[Манифест deployment frontend nginx](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.5/dep_frontend_nginx.yaml)
+
+[Манифест deployment backend multitool](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.5/dep_backend_multitool.yaml)
+
+[Манифест service frontend nginx](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.5/svc_frontend_nginx.yaml)
+
+[Манифест service backend multitool](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.5/svc_backend_multitool.yaml)
+
+
+[Манифест ingress](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.5/ingress.yaml)
 
 ------
 
