--- a/1.5/1.5.md
+++ b/1.5/1.5.md
@@ -57,7 +57,7 @@
 
 2. Создать Ingress, обеспечивающий доступ снаружи по IP-адресу кластера MicroK8S так, чтобы при запросе только по адресу открывался _frontend_ а при добавлении /api - _backend_.
 
-![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.5/Screen/ingress_status.png)
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/1.5/Screen/ingress_created.png)
 
 3. Продемонстрировать доступ с помощью браузера или `curl` с локального компьютера.
 
