--- a/2.1/2.1.md
+++ b/2.1/2.1.md
@@ -29,9 +29,29 @@
 Создать Deployment приложения, состоящего из двух контейнеров и обменивающихся данными.
 
 1. Создать Deployment приложения, состоящего из контейнеров busybox и multitool.
+
+Деплоймент развернут. К контейнерам подключен volume типа EmptyDir
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.1/Screen/dep_emptydir_apply.png)
+
 2. Сделать так, чтобы busybox писал каждые пять секунд в некий файл в общей директории.
+
+Для наглядности в busybox volume примонтирован в **/out**, в multitool в **/in**. busybox раз в 5 секунд записывает в /out/file сообщение вида `Mon Feb 10 11:19:52 UTC 2025 - busybox записал в общий файл случайное число 22891`
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.1/Screen/ls_tail_busybox.png)
+
 3. Обеспечить возможность чтения файла контейнером multitool.
+
+multitool может читать этот файл в /in/file
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.1/Screen/ls_tail_multitool.png)
+
 4. Продемонстрировать, что multitool может читать файл, который периодоически обновляется.
+
+Дополнительно после каждого чтения multitool выводит в консоль сообщение `multitool прочитал общий файл`
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.1/Screen/multitool_logs.png)
+
 5. Предоставить манифесты Deployment в решении, а также скриншоты или вывод команды из п. 4.
 
 ------
@@ -43,9 +63,28 @@
 Создать DaemonSet приложения, которое может прочитать логи ноды.
 
 1. Создать DaemonSet приложения, состоящего из multitool.
+
+Демонсет развернут. Для чтения хостового сислога необходим volume типа HostPath
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.1/Screen/daemon_hostpath_apply.png)
+
 2. Обеспечить возможность чтения файла `/var/log/syslog` кластера MicroK8S.
+
+Внутри контейнера volume примонтирован в /hostlogs с параметрами `subPath: syslog` для чтения только файла syslog с хостовой машины и `readOnly: true` для доступа только на чтение
+
 3. Продемонстрировать возможность чтения файла изнутри пода.
+
+Изнутри пода доступен для чтения сислог хостовой машины по пути /hostlogs/file, показаны 10 последних строчек
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.1/Screen/tail_syslog.png)
+
 4. Предоставить манифесты Deployment, а также скриншоты или вывод команды из п. 2.
+
+---
+
+[Манифест deployment emptydir](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.1/dep_emptydir.yaml)
+
+[Манифест daemonset hostpath](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.1/daemon_hostpath.yaml)
 
 ------
 
