--- a/2.1/2.1.md
+++ b/2.1/2.1.md
@@ -30,19 +30,19 @@
 
 1. Создать Deployment приложения, состоящего из контейнеров busybox и multitool.
 
-Деплоймент развернут. К контейнерам подключен volume типа EmptyDir
+Деплоймент развернут. К контейнерам подключен **volume** типа **EmptyDir**
 
 ![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.1/Screen/dep_emptydir_apply.png)
 
 2. Сделать так, чтобы busybox писал каждые пять секунд в некий файл в общей директории.
 
-Для наглядности в busybox volume примонтирован в **/out**, в multitool в **/in**. busybox раз в 5 секунд записывает в /out/file сообщение вида `Mon Feb 10 11:19:52 UTC 2025 - busybox записал в общий файл случайное число 22891`
+Для наглядности в **busybox** volume примонтирован в **/out**, в **multitool** в **/in**. busybox раз в 5 секунд записывает в **/out/file** сообщение вида `Mon Feb 10 11:19:52 UTC 2025 - busybox записал в общий файл случайное число 22891`
 
 ![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.1/Screen/ls_tail_busybox.png)
 
 3. Обеспечить возможность чтения файла контейнером multitool.
 
-multitool может читать этот файл в /in/file
+multitool может читать этот файл в **/in/file**
 
 ![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.1/Screen/ls_tail_multitool.png)
 
@@ -64,17 +64,17 @@ multitool может читать этот файл в /in/file
 
 1. Создать DaemonSet приложения, состоящего из multitool.
 
-Демонсет развернут. Для чтения хостового сислога необходим volume типа HostPath
+Демонсет развернут. Для чтения хостового сислога необходим **volume** типа **HostPath**
 
 ![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.1/Screen/daemon_hostpath_apply.png)
 
 2. Обеспечить возможность чтения файла `/var/log/syslog` кластера MicroK8S.
 
-Внутри контейнера volume примонтирован в /hostlogs с параметрами `subPath: syslog` для чтения только файла syslog с хостовой машины и `readOnly: true` для доступа только на чтение
+Внутри контейнера **volume** примонтирован в **/hostlogs** с параметрами `subPath: syslog` для чтения только файла syslog с хостовой машины и `readOnly: true` для доступа только на чтение
 
 3. Продемонстрировать возможность чтения файла изнутри пода.
 
-Изнутри пода доступен для чтения сислог хостовой машины по пути /hostlogs/file, показаны 10 последних строчек
+Изнутри пода доступен для чтения сислог хостовой машины по пути **/hostlogs/file**, показаны 10 последних строчек
 
 ![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.1/Screen/tail_syslog.png)
 
