--- a/2.2/2.2.md
+++ b/2.2/2.2.md
@@ -30,10 +30,34 @@
 Создать Deployment приложения, использующего локальный PV, созданный вручную.
 
 1. Создать Deployment приложения, состоящего из контейнеров busybox и multitool.
+
+Сначала все-таки создам PV и PVC, чтобы контейнеры могли работать с файлом
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.2/Screen/pv_pvc_bound.png)
+
 2. Создать PV и PVC для подключения папки на локальной ноде, которая будет использована в поде.
+
+PV и PVC связаны (bound), запуск развертывания. busybox пишет в файл, а multitool читает файл и дополнительно сообщает об этом в консоль
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.2/Screen/busybox_multitool.png)
+
 3. Продемонстрировать, что multitool может читать файл, в который busybox пишет каждые пять секунд в общей директории. 
 4. Удалить Deployment и PVC. Продемонстрировать, что после этого произошло с PV. Пояснить, почему.
-5. Продемонстрировать, что файл сохранился на локальном диске ноды. Удалить PV.  Продемонстрировать что произошло с файлом после удаления PV. Пояснить, почему.
+
+Deployment и PVC удалены. PV остался, поскольку в манифесте политика ReclaimPolicy определена как Retain (оставлять PV после удаления PVC)
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.2/Screen/delete_dep_pvc.png)
+
+5. Продемонстрировать, что файл сохранился на локальном диске ноды. Удалить PV. Продемонстрировать, что произошло с файлом после удаления PV. Пояснить, почему.
+
+Просмотр файла с локальной машины
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.2/Screen/file.png)
+
+Удаление PV и повторный просмотр файла. Все та же `persistentVolumeReclaimPolicy: Retain` указывает, что после удаления PVC и PV файлы должны остаться на месте
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.2/Screen/delete_pv.png)
+
 5. Предоставить манифесты, а также скриншоты или вывод необходимых команд.
 
 ------
@@ -45,9 +69,42 @@
 Создать Deployment приложения, которое может хранить файлы на NFS с динамическим созданием PV.
 
 1. Включить и настроить NFS-сервер на MicroK8S.
+
+NFS-сервер настроен по [инструкции](https://microk8s.io/docs/how-to-nfs)
+
 2. Создать Deployment приложения состоящего из multitool, и подключить к нему PV, созданный автоматически на сервере NFS.
-3. Продемонстрировать возможность чтения и записи файла изнутри пода. 
+
+Запуск Deployment без PVC. Под в состоянии Pending - оно и правильно, Volume на NFS еще не запрошен
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.2/Screen/dep_nfs_pending.png)
+
+Запуск PVC, Volume переходит в состояние Bound, а Deployment в Running, поскольку Volume запрошен и выделен
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.2/Screen/nfs_bound.png)
+
+3. Продемонстрировать возможность чтения и записи файла изнутри пода.
+
+Запись и чтение файла изнутри пода
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.2/Screen/nfs_rw_file.png)
+
+Вывод подробной информации о Volume, определение пути на NFS-сервере (в моем случае - нода кластера) и просмотр содержимого файла
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.2/Screen/nfs_rw_local.png)
+
 4. Предоставить манифесты, а также скриншоты или вывод необходимых команд.
+
+---
+
+[Манифест deployment с использованием local-storage](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.2/dep_busybox_multitool_pv.yaml)
+
+[Манифест persistentvolume](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.2/pv.yaml)
+
+[Манифест persistentvolume claim](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.2/pvc.yaml)
+
+[Манифест deployment с использованием NFS](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.2/dep_multitool_nfs.yaml)
+
+[Манифест persistentvolume claim NFS](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.2/pvc_nfs.yaml)
 
 ------
 
