--- a/2.3/2.3.md
+++ b/2.3/2.3.md
@@ -25,9 +25,60 @@
 ### Задание 1. Создать Deployment приложения и решить возникшую проблему с помощью ConfigMap. Добавить веб-страницу
 
 1. Создать Deployment приложения, состоящего из контейнеров nginx и multitool.
+
+Деплоймент запускается с ошибкой, поскольку оба контейнера в поде используют 80-й порт
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.3/Screen/dep_apply_error.png)
+
 2. Решить возникшую проблему с помощью ConfigMap.
+
+Переделаю деплоймент - переназначу переменную среды через `configMap` способом `ENV`
+
+```yaml
+        env:
+          - name: HTTP_PORT
+            valueFrom:
+              configMapKeyRef:
+                name: deployment-configmap
+                key: HTTP_PORT
+```
 3. Продемонстрировать, что pod стартовал и оба конейнера работают.
+
+Поскольку configMap должны быть созданы до того, как они будут использованы в модулях, нужно перезапустить деплоймент
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.3/Screen/dep_cfgm_fix.png)
+
 4. Сделать простую веб-страницу и подключить её к Nginx с помощью ConfigMap. Подключить Service и показать вывод curl или в браузере.
+
+Переделаю деплоймент - заменю файл индекса через `configMap` способом `Volume`
+
+```yaml
+        volumeMounts:
+        - name: deployment-configmap-volume
+          mountPath: /usr/share/nginx/html
+
+      volumes:
+      - name: deployment-configmap-volume
+        configMap:
+          name: deployment-configmap          
+```
+
+Поскольку `configMap` подключен способом `Volume`, все связки ключ-значение переедут в контейнер в виде отдельных файлов
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.3/Screen/dep_nginx_ls_cat.png)
+
+Service для nginx создан
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.3/Screen/svc_apply.png)
+
+curl до измененного индекса
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.3/Screen/dep_nginx_curl.png)
+
+http до измененного индекса
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.3/Screen/dep_nginx_browser.png)
+
 5. Предоставить манифесты, а также скриншоты или вывод необходимых команд.
 
 ------
@@ -35,10 +86,48 @@
 ### Задание 2. Создать приложение с вашей веб-страницей, доступной по HTTPS 
 
 1. Создать Deployment приложения, состоящего из Nginx.
+
+Деплоймент остается из предыдущего задания
+
 2. Создать собственную веб-страницу и подключить её как ConfigMap к приложению.
+
+Конфигмап остается из предыдущего задания
+
 3. Выпустить самоподписной сертификат SSL. Создать Secret для использования сертификата.
-4. Создать Ingress и необходимый Service, подключить к нему SSL в вид. Продемонстировать доступ к приложению по HTTPS. 
+
+Создание нового самоподписного сертификата и ключа
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.3/Screen/openssl_newkey.png)
+
+Создание Secret с использованием сертификта и ключа
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.3/Screen/secret_create.png)
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.3/Screen/secret_get.png)
+
+4. Создать Ingress и необходимый Service, подключить к нему SSL в вид. Продемонстировать доступ к приложению по HTTPS.
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.3/Screen/secret_svc_ingress_apply.png)
+
+Добавлю в `/etc/hosts` запись `test.com`
+
+https до измененного индекса через ингресс и новый сервис. Сертификат самоподписной, потому Firefox и ругается
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.3/Screen/nginx_ssl_browser.png)
+
 4. Предоставить манифесты, а также скриншоты или вывод необходимых команд.
+
+---
+
+[Манифест Deployment со всеми дополнениями](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.3/dep_nginx_multitool.yaml)
+
+[Манифест configMap со всеми дополнениями](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.3/cfgm_nginx_multitool.yaml)
+
+[Манифест Service без TLS](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.3/svc_nginx_multitool.yaml)
+
+[Манифест Service nginx с TLS](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.3/svc_tls_nginx.yaml)
+
+[Манифест Ingress nginx](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.3/ingress_nginx.yaml)
 
 ------
 
