--- a/2.4/2.4.md
+++ b/2.4/2.4.md
@@ -1,1 +1,107 @@
-# Домашнее задание к занятию «Управление доступом»### Цель заданияВ тестовой среде Kubernetes нужно предоставить ограниченный доступ пользователю.------### Чеклист готовности к домашнему заданию1. Установлено k8s-решение, например MicroK8S.2. Установленный локальный kubectl.3. Редактор YAML-файлов с подключённым github-репозиторием.------### Инструменты / дополнительные материалы, которые пригодятся для выполнения задания1. [Описание](https://kubernetes.io/docs/reference/access-authn-authz/rbac/) RBAC.2. [Пользователи и авторизация RBAC в Kubernetes](https://habr.com/ru/company/flant/blog/470503/).3. [RBAC with Kubernetes in Minikube](https://medium.com/@HoussemDellai/rbac-with-kubernetes-in-minikube-4deed658ea7b).------### Задание 1. Создайте конфигурацию для подключения пользователя1. Создайте и подпишите SSL-сертификат для подключения к кластеру.2. Настройте конфигурационный файл kubectl для подключения.3. Создайте роли и все необходимые настройки для пользователя.4. Предусмотрите права пользователя. Пользователь может просматривать логи подов и их конфигурацию (`kubectl logs pod <pod_id>`, `kubectl describe pod <pod_id>`).5. Предоставьте манифесты и скриншоты и/или вывод необходимых команд.------### Правила приёма работы1. Домашняя работа оформляется в своём Git-репозитории в файле README.md. Выполненное домашнее задание пришлите ссылкой на .md-файл в вашем репозитории.2. Файл README.md должен содержать скриншоты вывода необходимых команд `kubectl`, скриншоты результатов.3. Репозиторий должен содержать тексты манифестов или ссылки на них в файле README.md.------
+# Домашнее задание к занятию «Управление доступом»
+
+### Цель задания
+
+В тестовой среде Kubernetes нужно предоставить ограниченный доступ пользователю.
+
+------
+
+### Чеклист готовности к домашнему заданию
+
+1. Установлено k8s-решение, например MicroK8S.
+2. Установленный локальный kubectl.
+3. Редактор YAML-файлов с подключённым github-репозиторием.
+
+------
+
+### Инструменты / дополнительные материалы, которые пригодятся для выполнения задания
+
+1. [Описание](https://kubernetes.io/docs/reference/access-authn-authz/rbac/) RBAC.
+2. [Пользователи и авторизация RBAC в Kubernetes](https://habr.com/ru/company/flant/blog/470503/).
+3. [RBAC with Kubernetes in Minikube](https://medium.com/@HoussemDellai/rbac-with-kubernetes-in-minikube-4deed658ea7b).
+
+------
+
+### Задание 1. Создайте конфигурацию для подключения пользователя
+
+1. Создайте и подпишите SSL-сертификат для подключения к кластеру.
+
+Генерация ключа
+`openssl genrsa -out test.key 2048`
+
+Запрос сертификата
+`openssl req -new -key test.key -out test.csr -subj "/CN=test/O=operator"`
+
+Подписание сертификата
+`openssl x509 -req -in test.csr -CA /var/snap/microk8s/current/certs/ca.crt -CAkey /var/snap/microk8s/current/certs/ca.key -days 100 -out test.crt`
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.4/Screen/cert.png)
+
+2. Настройте конфигурационный файл kubectl для подключения.
+
+Создание пользователя
+`kubectl config set-credentials test --client-certificate=test.crt --client-key=test.key`
+
+Создание контекста
+`kubectl config set-context test-context --cluster=microk8s-cluster --user=test`
+
+Просмотр контестов
+`kubectl config get-contexts`
+
+Смена контекста
+`kubectl config use-context test-context`
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.4/Screen/user_context.png)
+
+3. Создайте роли и все необходимые настройки для пользователя.
+
+Включение RBAC
+`microk8s enable rbac`
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.4/Screen/rbac.png)
+
+Проверка прав. Роль не создана, права не выданы - кластер запрещает действия
+`kubectl get pods`
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.4/Screen/forbidden.png)
+
+Смена контекста
+`kubectl config use-context microk8s`
+
+Применение прав
+`kubectl apply -f role_test.yaml`
+
+Биндинг
+`kubectl apply -f bind_test.yaml`
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.4/Screen/role_bind_create.png)
+
+4. Предусмотрите права пользователя. Пользователь может просматривать логи подов и их конфигурацию (`kubectl logs pod <pod_id>`, `kubectl describe pod <pod_id>`).
+
+Смена контекста
+`kubectl config use-context test-context`
+
+Проверка прав
+`kubectl get pods`
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.4/Screen/get_describe.png)
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.4/Screen/logs.png)
+
+5. Предоставьте манифесты и скриншоты и/или вывод необходимых команд.
+
+---
+
+[Манифест Role](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.4/role_test.yaml)
+
+[Манифест Role binding](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.4/bind_test.yaml)
+------
+
+### Правила приёма работы
+
+1. Домашняя работа оформляется в своём Git-репозитории в файле README.md. Выполненное домашнее задание пришлите ссылкой на .md-файл в вашем репозитории.
+2. Файл README.md должен содержать скриншоты вывода необходимых команд `kubectl`, скриншоты результатов.
+3. Репозиторий должен содержать тексты манифестов или ссылки на них в файле README.md.
+
+------
+
