--- a/2.4/2.4.md
+++ b/2.4/2.4.md
@@ -27,12 +27,15 @@
 1. Создайте и подпишите SSL-сертификат для подключения к кластеру.
 
 Генерация ключа
+
 `openssl genrsa -out test.key 2048`
 
 Запрос сертификата
+
 `openssl req -new -key test.key -out test.csr -subj "/CN=test/O=operator"`
 
 Подписание сертификата
+
 `openssl x509 -req -in test.csr -CA /var/snap/microk8s/current/certs/ca.crt -CAkey /var/snap/microk8s/current/certs/ca.key -days 100 -out test.crt`
 
 ![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.4/Screen/cert.png)
@@ -40,15 +43,19 @@
 2. Настройте конфигурационный файл kubectl для подключения.
 
 Создание пользователя
+
 `kubectl config set-credentials test --client-certificate=test.crt --client-key=test.key`
 
 Создание контекста
+
 `kubectl config set-context test-context --cluster=microk8s-cluster --user=test`
 
-Просмотр контестов
+Просмотр контекстов
+
 `kubectl config get-contexts`
 
 Смена контекста
+
 `kubectl config use-context test-context`
 
 ![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.4/Screen/user_context.png)
@@ -56,22 +63,27 @@
 3. Создайте роли и все необходимые настройки для пользователя.
 
 Включение RBAC
+
 `microk8s enable rbac`
 
 ![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.4/Screen/rbac.png)
 
 Проверка прав. Роль не создана, права не выданы - кластер запрещает действия
+
 `kubectl get pods`
 
 ![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.4/Screen/forbidden.png)
 
 Смена контекста
+
 `kubectl config use-context microk8s`
 
 Применение прав
+
 `kubectl apply -f role_test.yaml`
 
 Биндинг
+
 `kubectl apply -f bind_test.yaml`
 
 ![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.4/Screen/role_bind_create.png)
@@ -79,9 +91,11 @@
 4. Предусмотрите права пользователя. Пользователь может просматривать логи подов и их конфигурацию (`kubectl logs pod <pod_id>`, `kubectl describe pod <pod_id>`).
 
 Смена контекста
+
 `kubectl config use-context test-context`
 
 Проверка прав
+
 `kubectl get pods`
 
 ![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.4/Screen/get_describe.png)
@@ -95,6 +109,7 @@
 [Манифест Role](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.4/role_test.yaml)
 
 [Манифест Role binding](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.4/bind_test.yaml)
+
 ------
 
 ### Правила приёма работы
