--- a/2.5/2.5.md
+++ b/2.5/2.5.md
@@ -23,16 +23,59 @@
 
 ### Задание 1. Подготовить Helm-чарт для приложения
 
-1. Необходимо упаковать приложение в чарт для деплоя в разные окружения. 
+1. Необходимо упаковать приложение в чарт для деплоя в разные окружения.
+
+В качестве приложения для деплоя возьму прокси-сервер `squid`
+
 2. Каждый компонент приложения деплоится отдельным deployment’ом или statefulset’ом.
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.5/Screen/helm_create.png)
+
 3. В переменных чарта измените образ приложения для изменения версии.
+
+В качестве переменных укажу тэг `4.13-21.10_beta` и порт `31001` для `prod`, а для `test` тэг `4.10-20.04_beta` и порт `31002`
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.5/Screen/helm_install.png)
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.5/Screen/helm_get.png)
+
+`4.13-21.10_beta` - `prod`
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.5/Screen/prod_describe.png)
+
+`4.10-20.04_beta` - `test`
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.5/Screen/test_describe.png)
 
 ------
 ### Задание 2. Запустить две версии в разных неймспейсах
 
 1. Подготовив чарт, необходимо его проверить. Запуститe несколько копий приложения.
 2. Одну версию в namespace=app1, вторую версию в том же неймспейсе, третью версию в namespace=app2.
+
+Создание пространств имен, запуск helm chart
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.5/Screen/helm_ns.png)
+
 3. Продемонстрируйте результат.
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.5/Screen/helm_all_ns.png)
+
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.5/Screen/get_values.png)
+
+---
+
+[Helm chart squid](https://github.com/holosix/squid-helm) взят отсюда
+
+[Манифест helm chart](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.5/squid-helm/Chart.yaml)
+
+[Манифест переменных по умолчанию](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.5/squid-helm/values.yaml)
+
+[Манифест переменных для prod](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.5/values_prod.yaml)
+
+[Манифест переменных для test](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.5/values_test.yaml)
+
+------
 
 ### Правила приёма работы
 
