--- a/2.5/2.5.md
+++ b/2.5/2.5.md
@@ -61,7 +61,7 @@
 
 ![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.5/Screen/helm_all_ns.png)
 
-![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.5/Screen/get_values.png)
+![Image alt](https://github.com/littlelucidlynx/kuber-homeworks/raw/main/2.5/Screen/helm_get_values.png)
 
 ---
 
